--- a/BookHub/Web.config
+++ b/BookHub/Web.config
@@ -14,7 +14,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <sessionState mode="InProc" />
+    <sessionState mode="InProc" timeout="86400" cookieless="false" />
   </system.web>
   <system.codedom>
     <compilers>
@@ -57,4 +57,7 @@
 		</dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    
+  </system.web>
 </configuration>
