--- a/BookHub/BookHub.csproj
+++ b/BookHub/BookHub.csproj
@@ -150,10 +150,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdminHome.aspx" />
     <Content Include="CartAction.aspx" />
     <Content Include="BookDetails.aspx" />
     <Content Include="CartProduct.aspx" />
     <Content Include="Checkout.aspx" />
+    <Content Include="css\admin.css" />
     <Content Include="css\authentication.css" />
     <Content Include="css\cart.css" />
     <Content Include="css\detail.css" />
@@ -166,6 +168,7 @@
     <Content Include="js\detail.js" />
     <Content Include="js\home.js" />
     <Content Include="js\script.js" />
+    <Content Include="Layout\_AdminLayout.master" />
     <Content Include="Login.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Resource\book_banner.png" />
@@ -173,6 +176,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminHome.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>AdminHome.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdminHome.aspx.designer.cs">
+      <DependentUpon>AdminHome.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CartAction.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>CartAction.aspx</DependentUpon>
@@ -225,6 +235,13 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Layout\_AdminLayout.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>_AdminLayout.master</DependentUpon>
+    </Compile>
+    <Compile Include="Layout\_AdminLayout.master.designer.cs">
+      <DependentUpon>_AdminLayout.master</DependentUpon>
+    </Compile>
     <Compile Include="Layout\_General.Master.cs">
       <DependentUpon>_General.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -255,7 +272,12 @@
     <Compile Include="Testt.aspx.designer.cs">
       <DependentUpon>Testt.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Ultis\AuthorizationPage.cs" />
+    <Compile Include="Ultis\AdminPage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ultis\AuthorizationPage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Ultis\Constants.cs" />
     <Compile Include="Ultis\SessionManager.cs" />
   </ItemGroup>
